dist_doc_DATA = LAPACK_LICENSE
noinst_LTLIBRARIES = libdsyev.la
libdsyev_la_LIBADD = ${top_builddir}/BLAS/libblas.la
libdsyev_la_SOURCES = \
disnan.f \
dlaisnan.f \
dlansy.f \
dlarfb.f \
dlartg.f \
dlasr.f \
dlatrd.f \
dorgql.f \
dsteqr.f \
dsytd2.f \
iladlc.f \
iparmq.f \
dlae2.f \
dlamch.f \
dlapy2.f \
dlarfg.f \
dlascl.f \
dlasrt.f \
dorg2l.f \
dorgqr.f \
dsterf.f \
dsytrd.f \
iladlr.f \
lsame.f \
dlaev2.f \
dlanst.f \
dlarf.f \
dlarft.f \
dlaset.f \
dlassq.f \
dorg2r.f \
dorgtr.f \
dsyev.f \
ieeeck.f \
ilaenv.f \
xerbla.f

